--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">businessComponent</string>
+
+    <!-- 默认配置,如不更改提示文字可以删掉 -->
+    <string name="business_http_unknown_error">未知错误</string>
+    <string name="business_http_no_network">网络不可用</string>
+    <string name="business_http_time_out_error">请求网络超时</string>
+    <string name="business_http_data_parsing_error">数据解析错误</string>
+    <string name="business_http_service_error">服务器发生错误</string>
+    <string name="business_http_address_error">请求地址不存在</string>
+    <string name="business_http_request_denied">请求被服务器拒绝</string>
+    <string name="business_http_request_redirect">请求被重定向到其他页面</string>
 </resources>
