feat：1.添加选择图片时大小限制，超出限制toast提示。2.预览大图时增加图片大小显示

--- a/view_module_picture/src/main/res/values/strings.xml
+++ b/view_module_picture/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="maven_picture_preview_image_count">%1$s/%2$s</string>
     <string name="maven_picture_open_camera_failure">打开相机失败</string>
     <string name="maven_picture_photo_grid_capture">拍一张</string>
+    <string name="maven_picture_max_length">最大只支持选择%s大小图片</string>
 </resources>
